<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.studentform.StudentFormActivity">

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_extra_large"
        android:text="@string/action_submit"
        app:layout_constraintBottom_toBottomOf="@+id/btn_cancel"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/btn_cancel" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_student_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_extra_large"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_extra_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_add_student_screen">

        <EditText
            android:id="@+id/et_student_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/hint_student_id"
            android:inputType="textPersonName"
            android:minHeight="@dimen/min_height"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textColorHint="#757575"

            tools:ignore="VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_full_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintEnd_toEndOf="@+id/til_student_id"
        app:layout_constraintStart_toStartOf="@+id/til_student_id"
        app:layout_constraintTop_toBottomOf="@+id/til_student_id">

        <EditText
            android:id="@+id/et_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/hint_full_name"
            android:inputType="textPersonName"
            android:minHeight="@dimen/min_height"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textColorHint="#757575"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_birth_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintEnd_toEndOf="@+id/til_student_id"
        app:layout_constraintStart_toStartOf="@+id/til_student_id"
        app:layout_constraintTop_toBottomOf="@+id/til_full_name">

        <EditText
            android:id="@+id/et_birth_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/hint_birth_date"
            android:inputType="date"
            android:minHeight="@dimen/min_height"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textColorHint="#757575"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintEnd_toEndOf="@+id/til_birth_date"
        app:layout_constraintStart_toStartOf="@+id/til_birth_date"
        app:layout_constraintTop_toBottomOf="@+id/spinner_address">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:minHeight="@dimen/min_height"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textColorHint="#757575"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_gpa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintEnd_toEndOf="@+id/til_email"
        app:layout_constraintStart_toStartOf="@+id/til_email"
        app:layout_constraintTop_toBottomOf="@+id/spinner_major">

        <EditText
            android:id="@+id/et_gpa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/hint_gpa"
            android:inputType="numberDecimal"
            android:minHeight="@dimen/min_height"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textColorHint="#546E7A"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/rb_gender_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_extra_large"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_extra_large"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_year">

        <RadioButton
            android:id="@+id/rb_item_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_weight="1"
            android:text="@string/rb_text_male"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            tools:ignore="VisualLintButtonSize" />

        <RadioButton
            android:id="@+id/rb_item_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_weight="1"
            android:text="@string/rb_text_female"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            tools:ignore="VisualLintButtonSize" />

        <RadioButton
            android:id="@+id/rb_item_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_weight="1"
            android:text="@string/rb_text_other"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            tools:ignore="VisualLintButtonSize" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spinner_year"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_medium"
        android:minHeight="@dimen/min_height"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/til_gpa"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/til_gpa"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_year"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_year"
        app:layout_constraintStart_toStartOf="@+id/til_gpa"
        app:layout_constraintTop_toTopOf="@+id/spinner_year" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_address"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_address"
        app:layout_constraintStart_toStartOf="@+id/til_birth_date"
        app:layout_constraintTop_toTopOf="@+id/spinner_address" />

    <Spinner
        android:id="@+id/spinner_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:minHeight="@dimen/min_height"
        app:layout_constraintEnd_toEndOf="@+id/til_birth_date"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/til_birth_date"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_major"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_major"
        app:layout_constraintStart_toStartOf="@+id/til_email"
        app:layout_constraintTop_toTopOf="@+id/spinner_major" />

    <Spinner
        android:id="@+id/spinner_major"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_medium"
        android:minHeight="@dimen/min_height"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        app:layout_constraintEnd_toEndOf="@+id/til_email"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/til_email"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:layout_marginEnd="@dimen/margin_extra_large"
        android:text="@string/action_cancel"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/rb_gender_group" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_add_student_screen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/label_new_student" />

</androidx.constraintlayout.widget.ConstraintLayout>